Timer handles are no longer weak.

--- a/src/TimerPool.vcxproj
+++ b/src/TimerPool.vcxproj
@@ -158,11 +158,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="DCTimerPool.h" />
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="TimerPool.cpp" />
     <ClCompile Include="Test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TimerPool.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
