--- a/.drone.yml
+++ b/.drone.yml
@@ -2,8 +2,17 @@ kind: pipeline
 name: default
 
 steps:
-- name: Test
-  image: gcc
+- name: Build
+  image: abcminiuser/docker-ci-ubuntu-buildtools
   commands:
   - make -C src all
+
+- name: Test
+  image: abcminiuser/docker-ci-ubuntu-buildtools
+  commands:
   - make -C src test
+
+- name: Valgrind
+  image: abcminiuser/docker-ci-ubuntu-buildtools
+  commands:
+  - make -C src valgrind
