--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,10 @@
 all:
 	$(CXX) -Wall -Wextra --std=c++14 -pthread *.cpp -o test
 
-test:
+test: all
 	./test
 
-.PHONY: all test
+valgrind: all
+	valgrind ./test
+
+.PHONY: all test valgrind
