--- a/src/TimerPool.vcxproj
+++ b/src/TimerPool.vcxproj
@@ -162,7 +162,7 @@
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="TimerPool.h" />
+    <ClInclude Include="TimerPool.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
