--- a/.drone.yml
+++ b/.drone.yml
@@ -26,7 +26,7 @@ steps:
 - name: Static Analysis
   image: abcminiuser/docker-ci-ubuntu-buildtools
   commands:
-  - cppcheck --enable=warning --quiet src
+  - make -C src cppcheck
 
 - name: Valgrind
   image: abcminiuser/docker-ci-ubuntu-buildtools
