--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,17 +1,17 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-add_executable (CPPTimerPool
+add_subdirectory("CPPTimerPool")
+
+add_executable (TestApp
     Test.cpp
-    TimerPool.cpp
-    TimerPool.hpp
 )
 
-target_include_directories (CPPTimerPool PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-target_compile_features (CPPTimerPool PUBLIC cxx_std_14)
+target_include_directories (TestApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_compile_features (TestApp PUBLIC cxx_std_14)
+target_link_libraries (TestApp PRIVATE CPPTimerPool)
 
 if (MSVC)
-    target_compile_options (CPPTimerPool PUBLIC /W3 /WX)
+    target_compile_options (TestApp PUBLIC /W3 /WX)
 else ()
-    target_compile_options (CPPTimerPool PUBLIC -Wall -Wextra -Werror -Wno-unused-parameter -Wshadow -Wdouble-promotion)
-    target_link_libraries (CPPTimerPool PUBLIC pthread)
+    target_compile_options (TestApp PUBLIC -Wall -Wextra -Werror -Wno-unused-parameter -Wshadow -Wdouble-promotion)
 endif ()
