--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-﻿cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.16)
 
 set (CMAKE_CONFIGURATION_TYPES Debug Release)
 
-project ("CPPTimerPool")
+project ("TimerPool")
 
 add_subdirectory ("src")
